# FastAPI_webhook_to_SQS

./: .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: env.example  main.py
app/docs/: utils.py
app/lib/: types.py  utils.py
app/lib/authentication/: basic_auth.py
app/lib/encryption/: __init__.py  verify_signature.py
app/lib/s3/: upload_data.py
app/lib/sqs/: read_message_from_sqs.py  send_message_to_sqs.py
